# policystrata

./: .env.example  .gitignore  .infisical.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EVAL_CARD.md  MANIFEST.in  README.md  SECURITY.md  action.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  socket.yml
.github/workflows/: ci.yml  publish.yml
docs/: benchmark-reference.md  distribution-roadmap.md  evidence.md  external-suite-protocol.md  failure-taxonomy.md  github-action.md  incident-reconstruction-template.md  js-distribution-decision.md  methodology.md  open-source-commercial-strategy.md  scanner.md  testing-ai-data-assistant.md  trace-adapters.md  trace-contract.md  trace-interop.md
examples/integrations/dbt_semantic/finance_saas/: semantic_models.yml
examples/postgres_dbt/: policystrata.yaml  policystrata_clean.yaml  policystrata_real_db_clean.yaml  semantic_models.yml  traces.jsonl  traces_clean.jsonl  traces_real_db_clean.jsonl
examples/secute_security_cases/: policystrata.yaml  prompt_manifest.json  source-map.json  traces.jsonl
examples/secute_security_cases/docs/: data-processing.md  internal-access.md  privacy.md  terms.md
scripts/: build-secute-anon-artifact.py  postgres-rls-evidence.py  reproduce-evidence.sh  reproduce-final.sh
src/policystrata/: __init__.py  __main__.py  artifact_report.py  baselines.py  cli.py  compiler.py  database.py  demo.py  detection.py  doctor.py  domain.py  evidence.py  exports.py  freeze.py  generator.py  init_scan.py  minimize.py  models.py  mutations.py  policy.py  runner.py  runtime.py  scan_models.py  scanner.py  summary.py  trace_import.py
src/policystrata/domains/analytics_clickhouse/: policy.yaml  schema.sql  seed.sql  surfaces.yaml
src/policystrata/domains/analytics_clickhouse/tasks/: seeded.yaml
src/policystrata/domains/finance_saas/: policy.yaml  schema.sql  seed.sql  surfaces.yaml
src/policystrata/domains/finance_saas/tasks/: seeded.yaml
src/policystrata/domains/support_saas/: policy.yaml  schema.sql  seed.sql  surfaces.yaml
src/policystrata/domains/support_saas/tasks/: seeded.yaml
src/policystrata/integrations/: __init__.py  dbt_semantic.py
src/policystrata/scanner_examples/postgres_dbt/: policystrata.yaml  policystrata_clean.yaml  policystrata_real_db_clean.yaml  traces_clean.jsonl  traces_real_db_clean.jsonl
tests/: test_benchmark_freeze.py  test_cli.py  test_clickhouse_domain.py  test_clickhouse_integration.py  test_compiler.py  test_database_assets.py  test_detection.py  test_domain.py  test_evidence.py  test_integrations.py  test_intentional_asymmetry.py  test_minimize.py  test_policy.py  test_postgres_integration.py  test_runner.py  test_runtime.py  test_scanner.py
