[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policystrata"
version = "1.0.2"
description = "Cross-layer policy regression testing for LLM data-agent stacks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Raintree Technology", email = "support@raintree.technology"}]
keywords = [
    "llm",
    "text-to-sql",
    "data-agents",
    "policy-testing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.2",
]

[project.urls]
Homepage = "https://github.com/raintree-technology/policystrata"
Repository = "https://github.com/raintree-technology/policystrata"
Documentation = "https://github.com/raintree-technology/policystrata#readme"
Paper = "https://raintree.technology/papers/PolicyStrata.pdf"
PaperRelease = "https://raintree.technology/blog/policystrata-release"
Artifact = "https://github.com/raintree-technology/policystrata/releases/download/policystrata-paper-2026-06-26/policystrata-submission-kit-2026-06-26.zip"
Changelog = "https://github.com/raintree-technology/policystrata/blob/main/CHANGELOG.md"
Issues = "https://github.com/raintree-technology/policystrata/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.0",
    "types-pyyaml>=6.0.0",
    "twine==6.1.0",
    "pycparser<3.0",
]

[project.scripts]
policystrata = "policystrata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["policystrata*"]

[tool.setuptools.package-data]
policystrata = [
    "py.typed",
    "domains/*/*.yaml",
    "domains/*/*.sql",
    "domains/*/tasks/*.yaml",
    "scanner_examples/*/*.jsonl",
    "scanner_examples/*/*.yaml",
    "scanner_examples/*/*.yml",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
exclude = ["tests/"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--showlocals"]
markers = [
    "integration: tests requiring Dockerized PostgreSQL",
]
